@@ -89,13 +89,26 @@ public class DeleteDocCommandTest {
     @Test
     public void execute_scheduleIoError_throwsCommandException() throws Exception {
         File scheduleFile = new File("data/schedule.json");
-        byte[] backup = Files.readAllBytes(scheduleFile.toPath());
+        boolean created = false;
+        byte[] backup = null;
+        if (scheduleFile.exists()) {
+            backup = Files.readAllBytes(scheduleFile.toPath());
+        } else {
+            scheduleFile.getParentFile().mkdirs();
+            Files.writeString(scheduleFile.toPath(), "{}");
+            backup = "{}".getBytes();
+            created = true;
+        }
         try {
             Files.writeString(scheduleFile.toPath(), "not valid json");
             DeleteDocCommand deleteDocCommand = new DeleteDocCommand(INDEX_FIRST_PERSON);
             assertThrows(CommandException.class, () -> deleteDocCommand.execute(model));
         } finally {
-            Files.write(scheduleFile.toPath(), backup);
+            if (created) {
+                scheduleFile.delete();
+            } else {
+                Files.write(scheduleFile.toPath(), backup);
+            }
         }
     }
 
